--- a/requirements_cpu.txt
+++ b/requirements_cpu.txt
@@ -56,7 +56,7 @@ protobuf==3.20.2
 psutil==5.9.5
 pyclipper==1.3.0.post4
 pycryptodome==3.18.0
-PyMuPDF
+PyMuPDF==1.25.3
 pyparsing==3.0.9
 python-dateutil==2.8.2
 python-docx==0.8.11
